# CudaClass

Tester.cu/: CMakeLists.txt  deviceQuery.cu  deviceQuery.exp  deviceQuery.lib  main.cu  main.exp  othermain.cu  othermain.exp  othermain.lib
